# physis

./: .gitignore  CMakeLists.txt  Doxyfile.cmake  LICENSE.txt  README.md  TODO  index.html
cmake/modules/: FindOpenCL.cmake  FindROSE.cmake
common/: CMakeLists.txt  config.h.cmake
config/: sample1.lua
docs/: build.md  build.org  compilation.md  compiling_physis.md  design.org  developer-guide.rst  install.md  programming.md  programming_physis.md  rose.md  rose.org  translating_physis.md  unfiled_notes.rst
examples/: CMakeLists.txt  test2.c  test6.c  test7.c  test_double_buffering.c  test_global_variable.c  test_periodic_boundary.c  test_set.c  test_staggered_grid.c
examples/copy/: copy3d.c
examples/diffusion/: diffusion3d.nodom.c  diffusion3d_fortran.F90  diffusion3d_physis.c  diffusion3d_physis_timing.c  diffusion3d_physis_timing_no_aoto_db.c  diffusion3d_physis_timing_no_auto_db.c
examples/diffusion-benchmark/: CMakeLists.txt  Makefile.cmake  README  autotune.conf  baseline.cc  baseline.h  diffusion3d.cc  diffusion3d.h  diffusion3d.mic.c  diffusion3d_cuda.cu  diffusion3d_cuda.h  diffusion3d_cuda_shared.cu  diffusion3d_cuda_temporal_blocking.cu  diffusion3d_cuda_temporal_blocking.h  diffusion3d_mic.cc  diffusion3d_mic.h  diffusion3d_openmp.cc  diffusion3d_openmp.h  diffusion3d_openmp_temporal_blocking.cc  diffusion3d_openmp_temporal_blocking.h  diffusion3d_physis.c  diffusion3d_physis.h  main.cc  opt.conf  stopwatch.h
examples/diffusion-fortran/: diffusion3d_fortran.F90  diffusion3d_original.c
examples/himeno/: CMakeLists.txt  Makefile.cmake  himenobmtxpa_original.c  himenobmtxpa_physis.c  himenobmtxpa_physis_double_bufferred.c  opt.conf  physis.conf
include/physis/: CMakeLists.txt  config.h.cmake  internal_common.h  math.h  physis.F90  physis.h  physis_common.h  physis_cuda.h  physis_cuda_hm.h  physis_mpi.h  physis_mpi_cuda.h  physis_mpi_opencl.h  physis_mpi_opencl_device.h  physis_mpi_openmp.h  physis_opencl.h  physis_opencl_kernel.h  physis_ref.h  physis_user.F90  physis_user.h  physis_util.h  reduce.h  runtime.h  stopwatch.h  types.h
misc/: add_source_header.py  rose-build.sh  rose-configure.sh  source_header.txt  valgrind-suppressions.supp
misc/opencl/: test-runtime-05-orig.c  test-runtime-05-orig.cuda.cu  test-runtime-05-orig.ref.c  test-runtime-05.c
runtime/: CMakeLists.txt  buffer.cc  buffer.h  buffer_cuda.cc  buffer_cuda.cu  buffer_cuda.h  buffer_mpi_openmp.cc  buffer_mpi_openmp.h  buffer_mpi_openmp_numa.cc  buffer_opencl.cc  buffer_opencl.h  common.cc  cuda_runtime.cc  cuda_util.h  grid.cc  grid.h  grid_mpi.cc  grid_mpi.h  grid_mpi2.cc  grid_mpi2.h  grid_mpi_cuda.cc  grid_mpi_cuda.h  grid_mpi_cuda_debug_util.h  grid_mpi_cuda_exp.cc  grid_mpi_cuda_exp.h  grid_mpi_debug_util.h  grid_mpi_opencl.cc  grid_mpi_opencl.h  grid_mpi_openmp.cc  grid_mpi_openmp.h  grid_mpi_openmp_misc.cc  grid_space_mpi.cc  grid_space_mpi.h  grid_space_mpi_cuda.h  grid_util.cc  grid_util.h  grid_util_mpi_openmp.cc  grid_util_mpi_openmp.h  ipc.h  ipc_mpi.cc  (+91 more)
runtime/fortran/: .gitignore  physis_ref.template.F90  template_grid_func_ref.f90
runtime/tests/: CMakeLists.txt  test_buffer.cc  test_buffer_cuda.cc  test_grid_mpi.cc  test_grid_mpi_cuda_exp.cc  test_grid_mpi_cuda_exp_utype.cc  test_mpi_cuda_runtime.cc  test_mpi_runtime_2d.cc  test_mpi_runtime_3d.cc
testing/: CMakeLists.txt  run_tests.sh.cmake
testing/tests/: CMakeLists.txt  test1.c  test5.c  test8.c  test9.c  test_1.c  test_2.c  test_3.c  test_4.c  test_4.manual.cuda.cu  test_4.manual.ref.c  test_5.c  test_6.c  test_6.ref.cuda.cu  test_7.c  test_8.c  test_9.c
tests/: CMakeLists.txt
tests/gmock/: README  (+1 more)
tests/system_tests/test_cases/: .gitignore  CMakeLists.txt  test_01.c  test_02.c  test_03.c  test_04.c  test_04.manual.cuda.cu  test_04.manual.ref.c  test_05.manual.cuda.cu  test_05.manual.ref.c  test_06.c  test_07.c  test_07.manual.cuda.cu  test_09.c  test_10.c  test_11.c  test_12.c  test_13.c  test_14.c  test_15.c  test_15.manual.cuda.cu  test_15.manual.ref.c  test_16.c  test_16.manual.cuda.cu  test_16.manual.ref.c  test_2.c  test_27-pt-periodic.c  test_27-pt-periodic.manual.cuda.cu  test_27-pt-periodic.manual.ref.c  test_27-pt-reduction.c  test_27-pt-reduction.manual.cuda.cu  test_27-pt-reduction.manual.ref.c  test_27-pt.c  test_3-pt-1d.c  test_3-pt-1d.manual.cuda.cu  test_3-pt-1d.manual.ref.c  test_3-pt-periodic.c  test_3-pt-periodic.manual.cuda.cu  test_3-pt-periodic.manual.ref.c  test_4.c  (+105 more)
translator/: CMakeLists.txt  SageBuilderEx.cc  SageBuilderEx.h  alias_analysis.cc  alias_analysis.h  ast_processing.cc  ast_processing.h  ast_traversal.h  builder_interface.cc  builder_interface.h  config.h.cmake  configuration.cc  configuration.h  cuda_builder.cc  cuda_builder.h  cuda_builder_interface.h  cuda_hm_runtime_builder.cc  cuda_hm_runtime_builder.h  cuda_hm_translator.cc  cuda_hm_translator.h  cuda_runtime_builder.cc  cuda_runtime_builder.h  cuda_translator.cc  cuda_translator.h  cuda_util.cc  cuda_util.h  def_analysis.cc  def_analysis.h  domain.cc  domain.h  fortran_output_fix.cc  fortran_output_fix.h  grid.cc  grid.h  kernel.cc  kernel.h  map.cc  map.h  mpi_builder_interface.h  mpi_cuda_optimizer.cc  (+80 more)
translator/optimizer/: cuda_optimizer.cc  cuda_optimizer.h  kernel_inlining.cc  loop_opt.cc  loop_peeling.cc  mpi_cuda_optimizer.cc  mpi_cuda_optimizer.h  mpi_optimizer.cc  mpi_optimizer.h  offset_cse.cc  offset_spatial_cse.cc  optimization_common.cc  optimization_common.h  optimization_passes.cc  optimization_passes.h  optimizer.cc  optimizer.h  premitive_optimization.cc  primitive_optimization.cc  reference_optimizer.cc  reference_optimizer.h  register_blocking.cc  unconditional_get.cc
translator/test/: CMakeLists.txt  common.cc  common.h  test_ast_processing.cc  test_ast_processing_input1.c  test_ast_processing_input_remove_redundant_variable_copy.c  test_ast_processing_input_remove_unused_func.c  test_ast_traversal.cc  test_ast_traversal_input.c  test_grid.cc
util/: CMakeLists.txt  configuration.cc  configuration.h  log4cpp-test.cpp  log4cpp.cpp  log4cpp.h  lua_loader.cc  lua_loader.h  template.py
(+9 files in other folders)
